--- a/index.html
+++ b/index.html
@@ -11,3 +11,6 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+<script type="application/javascript">
+  var global = window;
+</script>
