--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Haui Social</title>
+    <title>HaUI - Social Media Network</title>
+    <link rel="icon" href="https://cdn-001.haui.edu.vn//img/logo-haui-32x32.png">
   </head>
   <body>
     <div id="root"></div>
